// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBar 1`] = `
<DocumentFragment>
  <div
    class="flex-row"
    style="border-top: 2px solid #111; border-bottom: 2px solid #666; padding: 2px; overflow: hidden;"
  >
    <div
      class="flex-elem-fix"
    >
      <div
        class="color-gray  "
      >
        zero
      </div>
    </div>
    <div
      class="flex-elem-fix"
    >
      <div
        class="color-success "
      >
        one
      </div>
    </div>
    <div
      class="flex-elem-fix"
    >
      <div
        class="color-gray "
      >
        &gt;_&lt;
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusBar 2`] = `
<DocumentFragment>
  <div
    class="flex-row"
    style="border-top: 2px solid #111; border-bottom: 2px solid #666; padding: 2px; overflow: hidden;"
  >
    <div
      class="flex-elem-fix"
    >
      <div
        class="color-gray "
      >
        zero
      </div>
    </div>
    <div
      class="flex-elem-fix"
    >
      <div
        class="color-success  "
      >
        one
      </div>
    </div>
    <div
      class="flex-elem-fix"
    >
      <div
        class="color-gray "
      >
        &gt;_&lt;
      </div>
    </div>
  </div>
</DocumentFragment>
`;
